# discordbot

./: .gitignore  Cargo.toml  test_embed.json
src/: bot.rs  command.rs  component.rs  lib.rs  main.rs
src/commands/: command.rs  embed_creator.rs  mod.rs  purge.rs  welcome_debug.rs
