[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
serde = "1.0.215"
serde_json = "1.0.133"
serenity = { version = "0.12.4", features = ["model", "cache"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
